--- a/.cproject
+++ b/.cproject
@@ -14,7 +14,7 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactExtension="elf" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.cross.exe.release.385783058" name="Release" parent="cdt.managedbuild.config.gnu.cross.exe.release" postannouncebuildStep="Generating binary" postbuildStep="&quot;C:\Users\David\AppData\Local\Arduino15\packages\esp8266\tools\esptool\0.4.9/esptool.exe&quot; -eo &quot;C:\Users\David\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\2.3.0/bootloaders/eboot/eboot.elf&quot; -bo &quot;${workspace_loc:/${ProjName}/${ConfigName}}/DuetWiFiServer.bin&quot; -bm dio -bf 40 -bz 4M -bs .text -bp 4096 -ec -eo &quot;${workspace_loc:/${ProjName}/${ConfigName}}/${ProjName}.elf&quot; -bs .irom0.text -bs .text -bs .data -bs .rodata -bc -ec">
+				<configuration artifactExtension="elf" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.cross.exe.release.385783058" name="Release" parent="cdt.managedbuild.config.gnu.cross.exe.release" postannouncebuildStep="Generating binary" postbuildStep="&quot;C:\Users\David\AppData\Local\Arduino15\packages\esp8266\tools\esptool\0.4.12/esptool.exe&quot; -eo &quot;C:\Users\David\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\2.4.0-rc2/bootloaders/eboot/eboot.elf&quot; -bo &quot;${workspace_loc:/${ProjName}/${ConfigName}}/DuetWiFiServer.bin&quot; -bm dio -bf 40 -bz 4M -bs .text -bp 4096 -ec -eo &quot;${workspace_loc:/${ProjName}/${ConfigName}}/${ProjName}.elf&quot; -bs .irom0.text -bs .text -bs .data -bs .rodata -bc -ec">
 					<folderInfo id="cdt.managedbuild.config.gnu.cross.exe.release.385783058." name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.cross.exe.release.1856826829" name="Cross GCC" superClass="cdt.managedbuild.toolchain.gnu.cross.exe.release">
 							<option id="cdt.managedbuild.option.gnu.cross.prefix.641887751" name="Prefix" superClass="cdt.managedbuild.option.gnu.cross.prefix" value="xtensa-lx106-elf-" valueType="string"/>
@@ -25,6 +25,15 @@
 								<option defaultValue="gnu.c.optimization.level.most" id="gnu.c.compiler.option.optimization.level.167077255" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.debugging.level.1993215946" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.none" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.dialect.std.1591419358" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.default" valueType="enumerated"/>
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1806430434" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="__ets__"/>
+									<listOptionValue builtIn="false" value="ICACHE_FLASH"/>
+									<listOptionValue builtIn="false" value="F_CPU=80000000L"/>
+									<listOptionValue builtIn="false" value="ESP8266"/>
+									<listOptionValue builtIn="false" value="ARDUINO_ARCH_ESP8266"/>
+									<listOptionValue builtIn="false" value="ARDUINO_ESP8266_ESP12"/>
+									<listOptionValue builtIn="false" value="ARDUINO=10606"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.275991149" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.cross.cpp.compiler.1350524144" name="Cross G++ Compiler" superClass="cdt.managedbuild.tool.gnu.cross.cpp.compiler">
@@ -64,26 +73,29 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/ld}&quot;"/>
 								</option>
 								<option id="gnu.cpp.link.option.libs.2047329455" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false" valueType="libs">
-									<listOptionValue builtIn="false" value="m"/>
-									<listOptionValue builtIn="false" value="gcc"/>
+									<listOptionValue builtIn="false" value="CoreESP8266"/>
 									<listOptionValue builtIn="false" value="hal"/>
 									<listOptionValue builtIn="false" value="phy"/>
 									<listOptionValue builtIn="false" value="pp"/>
 									<listOptionValue builtIn="false" value="net80211"/>
+									<listOptionValue builtIn="false" value="LwipESP8266"/>
 									<listOptionValue builtIn="false" value="wpa"/>
 									<listOptionValue builtIn="false" value="crypto"/>
 									<listOptionValue builtIn="false" value="main"/>
 									<listOptionValue builtIn="false" value="wps"/>
 									<listOptionValue builtIn="false" value="axtls"/>
+									<listOptionValue builtIn="false" value="espnow"/>
 									<listOptionValue builtIn="false" value="smartconfig"/>
+									<listOptionValue builtIn="false" value="airkiss"/>
 									<listOptionValue builtIn="false" value="mesh"/>
 									<listOptionValue builtIn="false" value="wpa2"/>
 									<listOptionValue builtIn="false" value="stdc++"/>
-									<listOptionValue builtIn="false" value="LwipESP8266"/>
-									<listOptionValue builtIn="false" value="CoreESP8266"/>
+									<listOptionValue builtIn="false" value="m"/>
+									<listOptionValue builtIn="false" value="c"/>
+									<listOptionValue builtIn="false" value="gcc"/>
 								</option>
 								<option id="gnu.cpp.link.option.nostdlibs.1576244962" name="No startup or default libs (-nostdlib)" superClass="gnu.cpp.link.option.nostdlibs" useByScannerDiscovery="false" value="true" valueType="boolean"/>
-								<option id="gnu.cpp.link.option.flags.864191857" name="Linker flags" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="-TDuetWiFiSocketServer.ld -Wl,--no-check-sections -u call_user_start -Wl,-static -Wl,--gc-sections -Wl,-wrap,system_restart_local -Wl,-wrap,register_chipv6_phy -Wl,-Map,${ProjName}.map" valueType="string"/>
+								<option id="gnu.cpp.link.option.flags.864191857" name="Linker flags" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="-TDuetWiFiSocketServer.ld -Wl,--no-check-sections -u call_user_start -u _printf_float -u _scanf_float -Wl,-static -Wl,--gc-sections -Wl,-wrap,system_restart_local -Wl,-wrap,spi_flash_read -Wl,-Map,${ProjName}.map" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1700271964" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -112,7 +124,7 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactExtension="elf" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.cross.exe.release.385783058.1711183282" name="Debug" parent="cdt.managedbuild.config.gnu.cross.exe.release" postannouncebuildStep="Generating binary" postbuildStep="&quot;C:\Users\David\AppData\Local\Arduino15\packages\esp8266\tools\esptool\0.4.9/esptool.exe&quot; -eo &quot;C:\Users\David\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\2.3.0/bootloaders/eboot/eboot.elf&quot; -bo &quot;${workspace_loc:/${ProjName}/${ConfigName}}/DuetWiFiServer.bin&quot; -bm dio -bf 40 -bz 4M -bs .text -bp 4096 -ec -eo &quot;${workspace_loc:/${ProjName}/${ConfigName}}/${ProjName}.elf&quot; -bs .irom0.text -bs .text -bs .data -bs .rodata -bc -ec">
+				<configuration artifactExtension="elf" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.cross.exe.release.385783058.1711183282" name="Debug" parent="cdt.managedbuild.config.gnu.cross.exe.release" postannouncebuildStep="Generating binary" postbuildStep="&quot;C:\Users\David\AppData\Local\Arduino15\packages\esp8266\tools\esptool\0.4.12/esptool.exe&quot; -eo &quot;C:\Users\David\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\2.4.0-rc2/bootloaders/eboot/eboot.elf&quot; -bo &quot;${workspace_loc:/${ProjName}/${ConfigName}}/DuetWiFiServer.bin&quot; -bm dio -bf 40 -bz 4M -bs .text -bp 4096 -ec -eo &quot;${workspace_loc:/${ProjName}/${ConfigName}}/${ProjName}.elf&quot; -bs .irom0.text -bs .text -bs .data -bs .rodata -bc -ec">
 					<folderInfo id="cdt.managedbuild.config.gnu.cross.exe.release.385783058.1711183282." name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.cross.exe.release.420869583" name="Cross GCC" superClass="cdt.managedbuild.toolchain.gnu.cross.exe.release">
 							<option id="cdt.managedbuild.option.gnu.cross.prefix.1639058805" name="Prefix" superClass="cdt.managedbuild.option.gnu.cross.prefix" value="xtensa-lx106-elf-" valueType="string"/>
@@ -122,6 +134,16 @@
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.918668756" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
 								<option defaultValue="gnu.c.optimization.level.most" id="gnu.c.compiler.option.optimization.level.1374662193" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.debugging.level.1264535549" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.none" valueType="enumerated"/>
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.59305259" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="__ets__"/>
+									<listOptionValue builtIn="false" value="ICACHE_FLASH"/>
+									<listOptionValue builtIn="false" value="F_CPU=80000000L"/>
+									<listOptionValue builtIn="false" value="ESP8266"/>
+									<listOptionValue builtIn="false" value="ARDUINO_ARCH_ESP8266"/>
+									<listOptionValue builtIn="false" value="ARDUINO_ESP8266_ESP12"/>
+									<listOptionValue builtIn="false" value="ARDUINO=10606"/>
+									<listOptionValue builtIn="false" value="DEBUG"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.125797885" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.cross.cpp.compiler.1603584579" name="Cross G++ Compiler" superClass="cdt.managedbuild.tool.gnu.cross.cpp.compiler">
@@ -134,7 +156,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CoreESP8266/libraries/ESP8266mDNS}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CoreESP8266/libraries/DNSServer/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CoreESP8266/libraries/EEPROM}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CoreESP8266/sdk/lwip/include}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LwipESP8266/src/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CoreESP8266/sdk/include}&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.404190088" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
@@ -156,30 +178,35 @@
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.linker.88112554" name="Cross GCC Linker" superClass="cdt.managedbuild.tool.gnu.cross.c.linker"/>
 							<tool commandLinePattern="${COMMAND} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT} -Wl,--start-group ${INPUTS} -Wl,--end-group" id="cdt.managedbuild.tool.gnu.cross.cpp.linker.1400319925" name="Cross G++ Linker" superClass="cdt.managedbuild.tool.gnu.cross.cpp.linker">
 								<option id="gnu.cpp.link.option.paths.434353686" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" useByScannerDiscovery="false" valueType="libPaths">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LwipESP8266/Release}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CoreESP8266/Release}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CoreESP8266/sdk/lib}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/ld}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CoreESP8266/Release}&quot;"/>
 								</option>
 								<option id="gnu.cpp.link.option.libs.231887005" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false" valueType="libs">
-									<listOptionValue builtIn="false" value="m"/>
-									<listOptionValue builtIn="false" value="gcc"/>
+									<listOptionValue builtIn="false" value="CoreESP8266"/>
 									<listOptionValue builtIn="false" value="hal"/>
 									<listOptionValue builtIn="false" value="phy"/>
 									<listOptionValue builtIn="false" value="pp"/>
 									<listOptionValue builtIn="false" value="net80211"/>
+									<listOptionValue builtIn="false" value="LwipESP8266"/>
 									<listOptionValue builtIn="false" value="wpa"/>
 									<listOptionValue builtIn="false" value="crypto"/>
 									<listOptionValue builtIn="false" value="main"/>
 									<listOptionValue builtIn="false" value="wps"/>
 									<listOptionValue builtIn="false" value="axtls"/>
+									<listOptionValue builtIn="false" value="espnow"/>
 									<listOptionValue builtIn="false" value="smartconfig"/>
+									<listOptionValue builtIn="false" value="airkiss"/>
 									<listOptionValue builtIn="false" value="mesh"/>
 									<listOptionValue builtIn="false" value="wpa2"/>
 									<listOptionValue builtIn="false" value="stdc++"/>
-									<listOptionValue builtIn="false" value="CoreESP8266"/>
+									<listOptionValue builtIn="false" value="m"/>
+									<listOptionValue builtIn="false" value="c"/>
+									<listOptionValue builtIn="false" value="gcc"/>
 								</option>
 								<option id="gnu.cpp.link.option.nostdlibs.1825852023" name="No startup or default libs (-nostdlib)" superClass="gnu.cpp.link.option.nostdlibs" useByScannerDiscovery="false" value="true" valueType="boolean"/>
-								<option id="gnu.cpp.link.option.flags.1572116631" name="Linker flags" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="-TDuetWiFiSocketServer.ld -Wl,--no-check-sections -u call_user_start -Wl,-static -Wl,--gc-sections -Wl,-wrap,system_restart_local -Wl,-wrap,register_chipv6_phy -Wl,-Map,${ProjName}.map" valueType="string"/>
+								<option id="gnu.cpp.link.option.flags.1572116631" name="Linker flags" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="-TDuetWiFiSocketServer.ld -Wl,--no-check-sections -u call_user_start -u _printf_float -u _scanf_float -Wl,-static -Wl,--gc-sections -Wl,-wrap,system_restart_local -Wl,-wrap,spi_flash_read -Wl,-Map,${ProjName}.map" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1565240376" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -213,6 +240,7 @@
 		<configuration configurationName="Release">
 			<resource resourceType="PROJECT" workspacePath="/DuetWiFiSocketServer"/>
 		</configuration>
+		<configuration configurationName="Debug"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
