--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-Release
+
+# Misc
+*.old
+.settings/language.settings.xml
+Bugs.txt
+
+# Output folders
+/Release/
+/Debug/
